# SageMate

./: .gitignore  DESIGN.md  DESIGN_LANGUAGE.md  README.md  pyproject.toml  test-fenced.mjs  test_jieba.py  test_jieba_insert.py  test_url_collect.py  test_voice_fix.py  test_voice_silk.py
browser-extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
data/obsidian-test-vault/.obsidian/: graph.json  workspace.json
data/obsidian-test-vault/00-Inbox/: Quick Capture.md  Untitled Meeting Notes.md
data/obsidian-test-vault/06-People/: Alex Chen.md  David Deutsch.md  Niklas Luhmann.md  Sarah Liu.md
data/obsidian-test-vault/07-Meetings/: 1-1 with Alex Chen 2026-04-20.md  Sprint Planning 2026-04-20.md
data/obsidian-test-vault/08-MOCs/: Home.md  Information Retrieval.md  Natural Language Processing.md
data/obsidian-test-vault/09-Templates/: Concept Note Template.md  Daily Note Template.md  Meeting Template.md
data/obsidian-test-vault/99-Archive/: Old Job Search 2024.md  Trip to Japan 2024.md
data/obsidian-test-vault/Attachments/: README.md
data/raw/files/: test_doc.md
data/schema/: conventions.md
data/wiki/: index.md  log.md
data/wiki/analyses/: hermes-agent-evolver-controversy.md  zhipu-glm-cross-border-arbitrage.md
data/wiki/concepts/: accuracy-change-metric.md  agent-skill-integration.md  anti-inflammatory-antioxidant-foods.md  caloric-deficit-verification.md  deepseek-financing-and-infra.md  demos-position-in-prompt-bias.md  dietary-fiber.md  dingtalk-no-document-policy.md  hand-portion-sizing.md  high-quality-protein.md  in-context-learning-demo-positions.md  in-context-learning.md  low-gi-carbohydrates.md  mcp-apps.md  mcp-clients.md  mcp-ecosystem.md  mcp-servers.md  model-context-protocol.md  (+4 more)
docs/: API_REFERENCE.md  INGEST_OPTIMIZATION_PLAN.md  ISSUE_MARKDOWN_EDITOR.md  LAYOUT_REFACTOR_PLAN.md  LAYOUT_TERMINOLOGY.md  LONG_DOCUMENT_STRATEGY.md  OPTIMIZATION_PLAN.md  PRD_MARKDOWN_EDITOR.md  PRODUCT_ROADMAP.md  REFACTOR_PLAN.md  wechat_integration_protocol.md
docs/brand/: README.md
docs/insights/: Agent不需要全能-只需要像你.md  个人Agent的基石-第二大脑.md  温故知新-AI主动复习.md  灵魂数据-不是工作习惯.md
docs/plans/: BILLING_INTEGRATION_DESIGN.md  CHROME_EXTENSION_MVP.md  GTM_STRATEGY_PLAN.md  LICENSE_TIERS_SPEC.md  OBSIDIAN_INTEGRATION_PLAN.md  graduate_student_optimization_plan.md
docs/sagemate-philosophy/: AI时代的索引思维.md  README.md  xiaohongshu-post-1.md  xiaohongshu-post-2.md
frontend/: index.html  package-lock.json  package.json  second  test-codeblock-nodes.mjs  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
scripts/: build-sidecar.sh  bump_version.py  migrate_to_project_structure.py  migrate_translate.py  reset_data.py
scripts/pyinstaller/: hook-sagemate.py  sagemate.spec
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: main.rs
src/sagemate/: __init__.py  __main__.py  doctor.py  models.py
tests/: test_core.py  test_ingest_core.py  test_project_workspace.py  test_url_collector.py
(+233 files in other folders)
