[project]
name = "sagemate-core"
version = "0.2.0"
description = "Local-First LLM Wiki — A persistent, compounding knowledge base inspired by Karpathy's llm-wiki pattern"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
    "httpx[socks]>=0.27.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
    "agentscope>=1.0.18",
    "pycryptodome>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "httpx>=0.27.0",
]
parse = [
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "trafilatura>=1.10.0",
]

[project.scripts]
sagemate = "sagemate.api.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
